<resources xmlns:tools="http://schemas.android.com/tools">
    <!--  App Name  -->
    <string name="app_name">GMD</string>
    <string name="app_name_kor">지뭐듣</string>

    <!--  Tab name  -->
    <string name="tab_home">홈</string>
    <string name="tab_chart">차트</string>
    <string name="tab_setting">설정</string>


    <!--  alert message  -->
    <string name="alert_need_location_permission">앱을 이용하기 위해서는 위치 정보 접근 권한이 필요합니다.</string>
    <string name="alert_reject_location_permission">권한을 거부하셨습니다. [앱 설정] -> [권한] 항목에서 권한을 허용해주세요.</string>
    <string name="alert_app_finish_caused_by_rejected_permissions">권한 거절로 인해 앱이 종료됩니다.</string>
    <string name="alert_go_to_permission_setting">권한 설정하러 가기</string>
    <string name="alert_finish_pin_create">음악을 추가하시겠습니까?</string>
    <string name="alert_create_pin_here">이 곳에 음악을 추가하시겠습니까?</string>
    <string name="alert_go_to_set_location_page">위치 지정 페이지로 이동하시겠습니까?</string>
    <string name="alert_go_to_youtube">유튜브 페이지로 이동하시겠습니까?</string>
    <string name="alert_service_ready">서비스 준비 중입니다.</string>
    <string name="alert_liked_pin">음악을 공감하였습니다.</string>
    <string name="alert_cancel_to_like_pin">공감을 취소하였습니다.</string>


    <!--  error message  -->
    <string name="error_not_found_user_location">사용자의 위치 정보를 가져오는 데 실패했습니다.</string>
    <string name="error_not_found_location_data">Location Data 를 얻지 못함</string>
    <string name="error_not_found_pin_data">음악 데이터를 가져오지 못했습니다.</string>
    <string name="error_not_found_viewModel">해당 ViewModel 을 찾을 수 없습니다.</string>
    <string name="error_location_not_assigned">위치가 지정되지 않았습니다.</string>
    <string name="error_keyword_not_assigned">검색어를 입력해주세요!</string>"
    <string name="error_music_not_assigned">음악이 선택되지 않았습니다.</string>
    <string name="error_story_not_assigned">사연을 입력해주세요.</string>
    <string name="error_keyword_length_exceeded">검색어는 200자 까지 입력 가능합니다.</string>
    <string name="error_story_length_exceeded">사연은 최대 140자 까지 입력 가능합니다.</string>
    <string name="error_unstable_network_connection">연결이 고르지 않습니다.\n다시 시도해주시기 바랍니다.</string>
    <string name="error_network_no_connection">네트워크가 연결되지 않아 종료합니다.</string>
    <string name="unexpected_error">예기치 못한 문제가 발생했습니다.</string>


    <!--  success message  -->
    <string name="success_to_create_pin">음악 생성 성공</string>
    <string name="success_to_like_pin">핀 공감을 설정하였습니다.</string>
    <string name="success_to_cancel_liked_pin">핀 공감을 취소하였습니다.</string>


    <!--  text using in resource files  -->
    <string name="txt_create_music">음악 추천하기</string>
    <string name="txt_finish_to_create_music">음악 추가하기</string>
    <string name="txt_listen_to_youtube">유튜브로 듣기</string>
    <string name="txt_share">공유하기</string>
    <string name="txt_like">공감하기</string>
    <string name="txt_change_my_favorite_place">관심지역 변경</string>
    <string name="txt_view_my_music_pins">내가 추가한 음악</string>
    <string name="txt_view_my_comments">내 댓글 관리</string>
    <string name="txt_user_notification">사용자 알림</string>
    <string name="txt_noti_recommend_favorite_place">관심지역 음악 추천 알림</string>
    <string name="txt_customer_center">고객센터</string>
    <string name="txt_notice">공지사항</string>
    <string name="txt_app_guide">앱 사용 설명서</string>
    <string name="txt_app_policy">약관 및 정책</string>
    <string name="txt_app_version">현재 버전</string>

    <string name="txt_title_select_location">위치 선택하기</string>
    <string name="txt_title_create_pin_here">여기에 음악 추가하기</string>
    <string name="txt_title_create_pin_current_location">현재 위치에서 추천하기</string>
    <string name="txt_title_create_pin_other_place">다른 위치에서 추천하기</string>
    <string name="txt_title_select_other_place">화면을 길게 클릭하여 위치를 지정해주세요.</string>
    <string name="txt_title_search_music">음악 검색하기</string>
    <string name="txt_title_write_story">사연 입력하기</string>
    <string name="txt_title_write_hashtag">(선택) 태그 입력하기</string>
    <string name="txt_title_chart_fragment">의 인기차트</string>
    <string name="txt_guide_select_location">공유할 위치를 선택해주세요.</string>
    <string name="txt_guide_select_other_place">검색 창에서 장소를 검색한 뒤\n화면을 움직여 정확한 장소를 길게 클릭해주세요.</string>
    <string name="txt_guide_search_music">지금 당신이 듣고 싶은 음악을\n제목, 가수, 곡 정보 검색을 통해 찾아보세요.</string>
    <string name="txt_guide_write_story">사연을 통해서\n노래와 관련된 당신의 이야기를 들려주세요.</string>
    <string name="txt_guide_write_hashtag">해시태그를 통해 곡의 분위기를 표현해보세요.</string>
    <string name="txt_guide_no_result_music">검색 결과가 없습니다.</string>
    <string name="txt_guide_no_chart_result">현재 위치에서 생성된 인기차트가 없습니다.</string>

    <string name="hint_search_music">제목, 가수, 앨범을 입력하세요.</string>
    <string name="hint_story_maximum_length">140자 까지 입력 가능합니다.</string>
    <string name="hint_hashtag_maximum_count">태그는 최대 3개 까지 입력 가능합니다.</string>


    <!--  etc.  -->
    <string name="txt_confirm">확인</string>
    <string name="txt_yes">예</string>
    <string name="txt_no">아니오</string>
    <string name="txt_select">선택</string>
    <string name="txt_finish">종료</string>
    <string name="txt_music_title">제목</string>
    <string name="txt_music_artist">가수</string>
    <string name="txt_music_album">앨범</string>
    <string name="txt_artist_and_album">가수 · 앨범</string>
    <string name="txt_liked_count">회 공감</string>
    <string name="txt_current_location">현재 위치</string>
    <string name="txt_view_more" tools:ignore="TypographyEllipsis">...더보기</string>
    <string name="txt_login">로그인</string>
    <string name="txt_logout">로그아웃</string>
    <string name="txt_please">해주세요</string>
</resources>