<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/cardview_background_color"
    app:cardCornerRadius="@dimen/radius_to_16dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--  Album Image  -->
        <androidx.cardview.widget.CardView
            android:id="@+id/container_song_album_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/margin_to_8dp"
            app:cardCornerRadius="5dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_song_album_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher_round"/>
        </androidx.cardview.widget.CardView>

        <!--  Song Title  -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/container_song_album_image"
            android:layout_toStartOf="@+id/btn_select_song"
            android:layout_toEndOf="@+id/container_song_album_image"
            android:text="@string/txt_music_title"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxLength="28"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_to_16sp"
            android:textStyle="bold" />

        <!--  Song Artist & Album Title  -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_song_title"
            android:layout_alignStart="@+id/txt_song_title"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/margin_to_4dp"
            android:layout_marginEnd="@dimen/margin_to_16dp"
            android:layout_toStartOf="@+id/btn_select_song"
            android:ellipsize="end"
            android:maxLength="18"
            android:text="@string/txt_artist_and_album" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_select_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_to_16dp"
            android:padding="-16dp"
            android:text="@string/txt_select"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>