<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_song"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="invisible">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_song_albumCover"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="@dimen/margin_to_16dp"
        android:layout_marginTop="@dimen/margin_to_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_song_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_to_18dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_to_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/iv_star"
        app:layout_constraintStart_toEndOf="@+id/iv_song_albumCover"
        app:layout_constraintTop_toTopOf="@+id/iv_song_albumCover" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_song_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/txt_song_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_song_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_song_albumName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/iv_star"
        app:layout_constraintStart_toStartOf="@+id/txt_song_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_song_artist" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_to_8dp"
        android:src="@drawable/ic_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_song_hashtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_to_8dp"
        android:text=""
        android:textColor="@color/main_color"
        android:textSize="@dimen/txt_size_to_10sp"
        app:layout_constraintStart_toStartOf="@+id/iv_song_albumCover"
        app:layout_constraintTop_toBottomOf="@+id/iv_song_albumCover" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_song_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_to_8dp"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/iv_song_albumCover"
        app:layout_constraintTop_toBottomOf="@+id/txt_song_hashtag" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_song_userStory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_to_8dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/iv_star"
        app:layout_constraintStart_toEndOf="@+id/txt_song_userName"
        app:layout_constraintTop_toTopOf="@+id/txt_song_userName" />

    <!--  Functions  -->
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_song_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_to_24dp"
        android:layout_marginEnd="@dimen/margin_to_64dp"
        android:background="@drawable/ic_youtube"
        app:layout_constraintEnd_toStartOf="@+id/btn_song_like"
        app:layout_constraintTop_toBottomOf="@+id/txt_song_userStory" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_song_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_listen_to_youtube"
        android:textSize="@dimen/txt_size_to_12sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_song_youtube"
        app:layout_constraintStart_toStartOf="@+id/btn_song_youtube"
        app:layout_constraintTop_toBottomOf="@+id/btn_song_youtube" />
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_song_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_song_youtube" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_song_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_like"
        android:textSize="@dimen/txt_size_to_12sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_song_like"
        app:layout_constraintStart_toStartOf="@+id/btn_song_like"
        app:layout_constraintTop_toBottomOf="@+id/btn_song_like" />
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_song_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_to_64dp"
        android:background="@drawable/ic_share"
        app:layout_constraintStart_toEndOf="@+id/btn_song_like"
        app:layout_constraintTop_toTopOf="@+id/btn_song_youtube" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_song_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_share"
        android:textSize="@dimen/txt_size_to_12sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_song_share"
        app:layout_constraintStart_toStartOf="@+id/btn_song_share"
        app:layout_constraintTop_toBottomOf="@+id/btn_song_share" />

</androidx.constraintlayout.widget.ConstraintLayout>